Displays most recent messages and updates automatically.

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
@@ -15,6 +16,14 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <!-- Form Goes Here -->
+        <!-- Dropdown to select room -->
+        <!-- Text box for message -->
+        <!-- Submit button -->
+      <!-- Message Container -->
+      <div id="message-container">
+        
+      </div>
     </div>
     <div id="chats"></div>
   </body>
